--- a/src/manage/static/css/manage.css
+++ b/src/manage/static/css/manage.css
@@ -48,14 +48,39 @@ a.app-menu-item:focus { background-color:#EAF2FA }
 a.app-menu-item-selected:link { color:#d54e4d; }
 a.app-menu-item-selected:visited { color:#d54e4d; }
 
-.panel { border:1px solid #E3E3E3; background-color:#FFF; margin-bottom:16px; }
-.panel-title { background-color:#f1f1f1; font-weight:bold; border-bottom:1px solid #e3e3e3 }
-.panel-content { padding:0px; margin:0px; background-color:#fff }
+.panel {
+  width: 790px;
+  float: left;
+  margin-right: 10px;
+  border:1px solid #E3E3E3; background-color:#FFF; margin-bottom:16px;
+}
+.panel-title {
+  width: 790px;
+  float: left;
+  margin-right: 10px;
+  background-color:#f1f1f1; font-weight:bold; border-bottom:1px solid #e3e3e3;
+}
+.panel-content {
+  width: 790px;
+  float: left;
+  margin-right: 10px;
+  padding:0px; background-color:#fff;
+}
 
 .panel-title div { padding:3px 6px; }
 
-.th { background-color:#f9f9f9; word-break: break-all; word-wrap: break-word; }
-.tr { word-break: break-all; word-wrap: break-word; }
+.th {
+  width: 790px;
+  float: left;
+  margin-right: 10px;
+  background-color:#f9f9f9; word-break: break-all; word-wrap: break-word;
+}
+.tr {
+  width: 790px;
+  float: left;
+  margin-right: 10px;
+  word-break: break-all; word-wrap: break-word;
+}
 
 .th div div {padding:6px; }
 .tr div div {padding:6px; }
