--- a/src/blog/view/manage_message.html
+++ b/src/blog/view/manage_message.html
@@ -23,7 +23,7 @@ jQuery(function() {
       <div style="padding:12px; text-align:center">
 #set $n=0
 #for $label, $link, $new_window in $buttons
-        <button id="btn-${n}" name="btn-${n}" type="button" class="normal">${label}</button>
+        <button id="btn-${n}" name="btn-${n}" type="button" class="normal" style="margin:0px 12px;">${label}</button>
 #set $n=$n+1
 #end for
       </div>
