--- a/src/blog/view/manage_editor.html
+++ b/src/blog/view/manage_editor.html
@@ -35,8 +35,9 @@ function func_success(result) {
 function validate_form() {
     $('#save').attr('disabled', 'disabled');
     $('#loading').show();
-	//alert($('#edit_form').serialize() + '&content=' + encodeURIComponent(FCKeditorAPI.GetInstance('fckeditor').GetHTML()));
-    $.post('/manage/', $('#edit_form').serialize() + '&content=' + encodeURIComponent(FCKeditorAPI.GetInstance('fckeditor').GetHTML()), func_success, 'json');
+	var data = encodeURIComponent(FCKeditorAPI.GetInstance('fckeditor').GetHTML());
+	$('#fckeditor').val('');
+    $.post('/manage/', $('#edit_form').serialize() + '&content=' + data, func_success, 'json');
     return false;
 //#end raw
 }
