add set_focus arg in set_error()

--- a/src/manage/view/manage.html
+++ b/src/manage/view/manage.html
@@ -51,9 +51,9 @@ jQuery(function(){
     </div>
     <div class="span-20 last">
       <div class="span-20 last">
-        <div id="info_msg" class="msg success" style="display:none"></div>
-        <div id="warning_msg" class="msg notice" style="display:none"></div>
-        <div id="error_msg" class="msg error" style="display:none"></div>
+        <a name="info_msg"></a><div id="info_msg" class="msg success" style="display:none"></div>
+        <a name="warning_msg"></a><div id="warning_msg" class="msg notice" style="display:none"></div>
+        <a name="error_msg"></a><div id="error_msg" class="msg error" style="display:none"></div>
       </div>
       <div class="span-20 last">
         ${__embeded____raw__}
