update blog app's management: add page management

--- a/src/blog/view/manage_editor.html
+++ b/src/blog/view/manage_editor.html
@@ -2,20 +2,27 @@
 <script type="text/javascript">
 var g_app='${app}';
 var g_command='${command}';
+jQuery(function() {
+	//#if not $post.static
+	jQuery('\#category').val('${post.category.id}');
+	//#end if
+});
+
 //#raw
 function func_success(result) {
     if (result.error) {
         $('#save').removeAttr('disabled');
         $('#loading').hide();
-        set_error(result.error);
+        set_error(result.error, true);
     }
     else {
-		msg = 'Your post "<strong>' + result.title + '</strong>" has been published successfully!';
+		n = result.static ? 'page' : 'post';
+		msg = 'Your ' + n + ' "<strong>' + result.title + '</strong>" has been published successfully!';
 		if (result.state==1) {
-			msg = 'Your post "<strong>' + result.title + '</strong>" has been saved and pending for approval.';
+			msg = 'Your ' + n + ' "<strong>' + result.title + '</strong>" has been saved and pending for approval.';
 		}
 		else if (result.state==2) {
-			msg = 'Your post "<strong>' + result.title + '</strong>" has been saved as draft.';
+			msg = 'Your ' + n + ' "<strong>' + result.title + '</strong>" has been saved as draft.';
 		}
 		$('#message_title').html(result.title);
 		$('#message_content').html(msg);
@@ -33,9 +40,23 @@ function func_success(result) {
 }
 
 function validate_form() {
+	if ($.trim($('#title').val())=='') {
+		set_error('Please enter the title.', true);
+		return false;
+	}
+    if ($('#category').length && $('#category').val()=='') {
+		set_error('Please select a category.', true);
+		return false;
+	}
+	var content = FCKeditorAPI.GetInstance('fckeditor').GetHTML();
+	if ($.trim(content)=='') {
+		set_error('Please enter the content.', true);
+		return false;
+	}
+	set_error();
     $('#save').attr('disabled', 'disabled');
     $('#loading').show();
-	var data = encodeURIComponent(FCKeditorAPI.GetInstance('fckeditor').GetHTML());
+	var data = encodeURIComponent(content);
 	$('#fckeditor').val('');
     $.post('/manage/', $('#edit_form').serialize() + '&content=' + data, func_success, 'json');
     return false;
@@ -49,7 +70,8 @@ function validate_form() {
       <div id="message_content" style="padding:12px; font-size:1.2em"></div>
       <div id="message_button" style="padding:12px 12px 12px 40px;">
 	    <button id="add_another" name="add_another" type="button" class="normal">Add Another</button>
-	    <button id="preview" name="preview" type="button" class="normal" style="display:none">View</button>
+	    <span>&nbsp;&nbsp;&nbsp;</span>
+		<button id="preview" name="preview" type="button" class="normal" style="display:none">View</button>
 	  </div>
     </div>
   </div>
@@ -60,7 +82,7 @@ function validate_form() {
   <input type="hidden" name="app" value="${app}" />
   <input type="hidden" name="command" value="${command}" />
   <input type="hidden" name="id" value="${post.id}" />
-
+  <input type="hidden" name="btn" value="edit" />
   <div class="panel-title">
     <div>
     #if $post.static
