--- a/src/blog/view/manage_post_list.html
+++ b/src/blog/view/manage_post_list.html
@@ -1,4 +1,4 @@
-<!-- begin manage_list.html -->
+<!-- begin manage_post_list.html -->
 <script type="text/javascript">
 var g_app = '${app}';
 var g_command = '${command}';
@@ -167,4 +167,4 @@ $(function() {
   </div>
   </form>
 </div>
-<!-- end manage_list.html -->
+<!-- end manage_post_list.html -->
