fix manage_profile view. add manage_site

--- a/src/manage/view/manage_profile.html
+++ b/src/manage/view/manage_profile.html
@@ -41,7 +41,7 @@ function validate_form(){
 <div class="panel box-round">
   <form name="profile" action="/manage/" method="post" onsubmit="return validate_form()">
   <input type="hidden" name="app" value="${app}" />
-  <input type="hidden" name="action" value="${command}" />
+  <input type="hidden" name="command" value="${command}" />
   <input type="hidden" name="passwd" id="passwd" />
   <div class="panel-title"><div>Your Profile</div></div>
   <div class="panel-content">
