--- a/src/manage/view/manage.html
+++ b/src/manage/view/manage.html
@@ -56,7 +56,7 @@ jQuery(function(){
         <a name="error_msg"></a><div id="error_msg" class="msg error" style="display:none"></div>
       </div>
       <div class="span-20 last">
-        ${__embeded____raw__}
+        ${__embedded____raw__}
       </div>
     </div>
     <div id="footer" class="span-24 last"><div>Thank you for creating with <a href="http://www.expressme.org/" target="_blank">Express Me</a>. | <a href="http://www.expressme.org/wiki/" target="_blank">Documentation</a> | <a href="http://code.google.com/p/express-me/issues/list" target="_blank">Report Issues</a><span style="float:right">Version ${version}</span></div></div>
